--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,16 +1,18 @@
-<h2>SIGNUP</h2>
+<h2>REGISTER: </h2>
 <form id="signup-form" class="card-body" method= "POST" action="/api/user">
-  <div>
-    <label for="username-input-signup">Username</label>
-    <input name="username" type="text" id="username-input-signup" />
+  <div class="form-outline mb-4">
+    <label for="username-input-signup" class="form-label">Username</label>
+    <input name="username" type="text" id="username-input-signup" class="form-control" />
   </div>
-  <div>
-    <label for="password-input-signup">Password</label>
-    <input name= "password" type="password" id="password-input-signup" />
+  
+  <div class="form-outline mb-4">
+    <label for="password-input-signup" class="form-label">Password</label>
+    <input name= "password" type="password" id="password-input-signup" class="form-control" />
   </div>
+
   {{!-- <button type="submit" >Signup!</button> --}}
-  <a type="button" href="/login"> Signup!</a>
-  <a type="button" href="/login">Now Login</a>
+  <a type="button" href="/login" class="btn btn-primary" > Signup!</a>
+  {{!-- <a type="button" href="/login" class="btn btn-secondary">Now Login</a> --}}
 </form>
 
 {{!-- <script src="/js/signup.js"></script> --}}
